--- a/Manuscript_with_Heshkaia.tex
+++ b/Manuscript_with_Heshkaia.tex
@@ -145,7 +145,7 @@
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
   pdftitle={Interspecies comparisons of Mg/Ca ratios in limpet shells},
-  pdfauthor={Niklas Hausmann; Donna Surge; Francisco Zangrando; Angelica Tivoli; Ivan Briz-Godino},
+  pdfauthor={Niklas Hausmann; Donna Surge; Ivan Briz-Godino},
   pdfkeywords={Sclerochronology, Limpets, Elemental Ratio, Mg/Ca},
   colorlinks=true,
   linkcolor={blue},
@@ -167,15 +167,7 @@
 %
 }
 
-\author[3]{Francisco Zangrando%
-%
-}
-
-\author[3]{Angelica Tivoli%
-%
-}
-
-\author[4]{Ivan Briz-Godino%
+\author[3]{Ivan Briz-Godino%
 %
 }
 
@@ -187,14 +179,9 @@ Archäologie},addressline={Ludwig-Lindenschmit-Forum
 Carolina},addressline={104 South Road, 225 Geology
 Building},city={Chapel Hill,
 NC},country={US},countrysep={,},postcode={27599-3315},postcodesep={}}
-\affiliation[3]{organization={CONICET (Consejo Nacional de
-Investigaciones Científicas y Técnicas)},addressline={Avenida Maipú
-305},city={Ushuaia},country={Argentina},countrysep={,},postcode={V9410BJA},postcodesep={}}
-\affiliation[4]{organization={},country={Spain},countrysep={,},postcodesep={}}
+\affiliation[3]{organization={},country={Spain},countrysep={,},postcodesep={}}
 
 \cortext[cor1]{Corresponding author}
-
-
 
 
 
@@ -208,18 +195,18 @@ between sea surface temperature and Mg/Ca ratios, this is not the case
 for other patelloid species. \emph{Patella vulgata} and \emph{Nacella
 deaureata} have been studied using Mg/Ca with mixed or contrary results.
 In this study, we present elemental maps of various such species
-together with stable oxygen isotope values for some of the specimens.
-Our dataset also includes specimens that were previously unsuccessful in
-providing significant correlations between δ\textsuperscript{18}O and
-Mg/Ca ratios. By reassessing these previous specimens and including a
-wider range of modern and archaeological samples from three patelloid
-species (\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N.
-magellanica}) we further add to the growing set of evidence for the
-reliable use of Mg/Ca ratios to detect palaeotemperature change and
-serve as a means to determine ontogenetic age and season of capture as
-well as to reveal locations of interest within the growth record
-(i.e.~annual temperature minima and maxima) for the targeted analysis
-using δ\textsuperscript{18}O or clumped oxygen isotope analysis.
+together with stable oxygen isotope values. Our dataset also includes
+specimens that were previously unsuccessful in providing significant
+correlations between δ\textsuperscript{18}O and Mg/Ca ratios. By
+reassessing these previous specimens and including a wider range of
+modern and archaeological samples (n=12) from three patelloid species
+(\emph{P. vulgata}, \emph{N. deaureata}, and \emph{N. magellanica}) we
+further add to the growing set of evidence for the reliable use of Mg/Ca
+ratios to detect palaeotemperature change and serve as a means to
+determine ontogenetic age and season of capture as well as to reveal
+locations of interest within the growth record (i.e.~annual temperature
+minima and maxima) for the targeted analysis using
+δ\textsuperscript{18}O or clumped oxygen isotope analysis.
 \end{abstract}
 
 
@@ -301,15 +288,29 @@ marine mollusc shells.
 
 \subsection{Limpet specimens}\label{limpet-specimens}
 
-\subsubsection{Modern specimens}\label{modern-specimens}
-
 The analysed specimens, their origin and respective studies with
-research background information can be found in \hyperref[Table_1]{Table
-1}. Here we will briefly summarise their contextual information, which
-can be accessed in more detail at the respective studies
+research background information can be found in
+Table\hyperref[Table_1]{1}. Here we will briefly summarise their
+contextual information, which can be accessed in more detail at the
+respective studies
 \citep{Nicastro2020-ih, Surge2012-ba, Graniero2017-io}. While those
 studies also included other specimens, their accessibility or state of
 preservation did not all lend them to be re-analysed.
+
+There are two main locations that we sourced specimens from: the Beagle
+Channel in Tierra del Fuego (Argentina) and the island of West Ray in
+Orkney (UK). Four specimens were collected from the Beagle Channel in
+Cambaceres Bay in October 2016. The area receives around 570 mm
+precipitation but the channel waters are predominantly influenced by
+marine currents and in the period of October 2015 to October 2016 stayed
+around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
+August to 10ºC in February.
+
+On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
+August 2009. Westray lies about 70 km north of the Scottish mainland and
+experiences virtually no freshwater input with salinity values of 34.0
+-- 34.5 psu \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in
+March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
 
 \phantomsection\label{Table_1}
 \begin{longtable}[]{@{}
@@ -373,71 +374,31 @@ analysis \\
 & & & & QG2-7180-1 & \\
 & & & & QG2-7180-2 & \\
 & & & & QG1-7246-1 & \\
-& This study & \emph{N. magellanica} & Heshkaia 35 in Moat Bay - Tierra
-del Fuego (AR) & Heshkaia\_35-1 & \emph{none} \\
-& & \emph{N. deaureata} & & Heshkaia\_35-2 & \\
-& & \emph{N. deaureata} & & Heshkaia\_35-3 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-4 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-5 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-6 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-7 & \\
-& & \emph{N. deaureata} & & Heshkaia\_35-8 & \\
-& & \emph{N. magellanica} & & Heshkaia\_35-9 & \\
 \end{longtable}
 
-There are two main locations that we sourced specimens from: the Beagle
-Channel in Tierra del Fuego (Argentina) and the island of West Ray in
-Orkney (UK). Four specimens were collected from the Beagle Channel in
-Cambaceres Bay in October 2016. The area receives around 570 mm
-precipitation but the channel waters are predominantly influenced by
-marine currents and in the period of October 2015 to October 2016 stayed
-around 30.7 ± 0.7 psu \citep{Nicastro2020-ih}. SSTs range from 4.7ºC in
-August to 10ºC in February.
-
-On Westray one modern shell (ORK-LT5) was collected in Rack Wick Bay in
-August 2009. Westray lies about 70 km north of the Scottish mainland and
-experiences virtually no freshwater input with salinity values of 34.0
--- 34.5 psu \citep{Inall2009-ho}. The annual SST ranges from 6.3ºC in
-March to 13.8ºC in August (Figure~\ref{fig-SSTs}).
-
-\begin{figure}
+\begin{figure}[H]
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-SSTs-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-SSTs-1.pdf}
 
 }
 
-\caption{\label{fig-SSTs}SST values averaged from years. SST values were
-sourced from \citet{Good2020-nl}}
+\caption{\label{fig-SSTs}Monthly Sea Surface Temperature values averaged
+from years. SST values were sourced from \citet{Good2020-nl} .}
 
 \end{figure}%
 
-\subsubsection{Archaeological specimens}\label{archaeological-specimens}
-
-In total, we studied 16 archaeological specimens. Of those, seven
-\emph{P. vulgata} come from Quoygrew on Westray dating to 900 -- 1200
-CE. These shells have previously been studied to characterise seasonal
-temperature change during the Medieval Climate Anomaly and the Little
-Ice Age \citep{Surge2012-ba}. Together they show a range of lifespans,
-with some comparatively long for their size (QG1-7246-1, 12 years within
-16 mm of growth) making them particularly susceptible to time-averaging.
-That said, the majority are under 5 years old. These shells are an ideal
+In total, we studied 7 archaeological specimens of \emph{P. vulgata}
+coming from Quoygrew on Westray dating to 900 -- 1200 CE. These shells
+have previously been studied to characterise seasonal temperature change
+during the Medieval Climate Anomaly and the Little Ice Age
+\citep{Surge2012-ba}. Together they show a range of lifespans, with some
+comparatively long for their size (QG1-7246-1, 12 years within 16 mm of
+growth) making them particularly susceptible to time-averaging. That
+said, the majority are under 5 years old. These shells are an ideal
 comparative dataset from an archaeological assemblage to compare to the
 modern shell ORK\_LT5 \citep{Graniero2017-io}.
-
-Nine additional shells of \emph{N. magellanica} (n=6) and \emph{N}.
-\emph{deaureata} (n=3) have been selected for LIBS analysis only, to
-provide a comparative dataset to the modern \emph{Nacella} sp. shells.
-These have not been analysed for δ\textsuperscript{18}O-values, but
-rather as a test to see whether patterns visible in the modern Mg/Ca
-ratio distributions are also preserved and apparent in the
-archaeological shells. They derive from the site of Heshkaia 35 situated
-within Moat Bay, around 30 km east of where the modern specimens in our
-study were collected \citep{Zangrando2014-qi, Zangrando2021-qg}. With
-radiocarbon dates putting the shells into the Late Holocene (1300 --
-1450 CE) they are of similar age --- if somewhat younger --- as the
-assemblage from Quoygrew.
 
 \subsection{Methods}\label{methods}
 
@@ -507,7 +468,7 @@ quantify the variability of recorded annual ranges between specimens.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_iso-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Nac_iso-1.pdf}
 
 }
 
@@ -520,7 +481,7 @@ shells from Cambaceres Bay (\emph{a-f}).}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_iso-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Pat_iso-1.pdf}
 
 }
 
@@ -575,7 +536,7 @@ almost entirely made of aragonite, this layer is very thin.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_LIBS-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Pat_LIBS-1.pdf}
 
 }
 
@@ -619,7 +580,7 @@ be well aligned.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Comp-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Pat_Comp-1.pdf}
 
 }
 
@@ -645,7 +606,7 @@ correlation of both proxies. The mean R\textsuperscript{2} value is
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Pat_Corr-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Pat_Corr-1.pdf}
 
 }
 
@@ -674,7 +635,7 @@ NM-1016-3 (Figure~\ref{fig-Nac_LIBS} c).
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_LIBS-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Nac_LIBS-1.pdf}
 
 }
 
@@ -698,7 +659,8 @@ Figure~\ref{fig-Nac_LIBS} c, where Mg/Ca intensity ratios range from
 ratio depends chiefly on the chosen emission lines to calculate the
 proportion of the chosen Magnesium to the Calcium peak, the low ratios
 still indicate lower concentrations than seen elsewhere, or seen only in
-aragonitic parts of e.g.~\emph{Patella} shells.
+aragonitic parts of e.g.~\emph{Patella} shells. Similar observations
+have been made before \citep{Graniero2017-io}.
 
 Line scans reflect well the changes previously indicated by
 δ\textsuperscript{18}O values and also indicate about two years of
@@ -719,7 +681,7 @@ the shells and its simple make-up.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Comp-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Nac_Comp-1.pdf}
 
 }
 
@@ -749,7 +711,7 @@ scans.
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Nac_Corr-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Nac_Corr-1.pdf}
 
 }
 
@@ -769,8 +731,8 @@ Nevertheless, the resulting R\textsuperscript{2}-values for each species
 were high (\emph{P. vulgata mean R\textsuperscript{2}}=0.89, \emph{N.
 deaureata mean R\textsuperscript{2}}=0.86\emph{, N. magellanica mean
 R\textsuperscript{2}}=0.88). These results are similar to previously
-published data on \emph{Patella} sp. shells
-(Table~\ref{tbl-other_corrs}). R\textsuperscript{2} values of \emph{P.
+published data on \emph{Patella} sp. shells (Table
+\hyperref[Table_2]{2}). R\textsuperscript{2} values of \emph{P.
 depressa} lie between 0.78 and 0.87 \citep{Garcia-Escarzaga2021-ij}, for
 \emph{P. caerulea} from the Mediterranean between 0.78 and 0.96 ---
 although with one outlier of 0.33, which had increased Mg/Ca ratios in
@@ -778,7 +740,7 @@ increments with rich organic contents \citep{Hausmann2019-fi}.
 
 \emph{P. rustica} has two studied specimens (JL1 and JL2) with
 R\textsuperscript{2}-values of 0.02 and 0.8, respectively
-\citep{Ferguson2011-zl} Figure~\ref{fig-Ferg}. Together with the data
+\citep{Ferguson2011-zl} (Figure~\ref{fig-Ferg}). Together with the data
 from two \emph{P. caerulea} shells (JM00 and JM30 with
 R\textsuperscript{2}-values of 0.69 and 0.83), the data from JL2 was
 used determine a general Mg/Ca-SST relationship with an
@@ -795,25 +757,31 @@ ratio unpredictably, leading to what might look like an ontogenetic
 trend in a linear dataset. Whether these anomalies affected JL1 in the
 same way, albeit stronger, is not clear but it might well be possible.
 
-\begin{table}
-
-\caption{\label{tbl-other_corrs}Table showing correlations of Mg/Ca and
-δ\textsuperscript{18}O found in other studies. * indicates that only SST
-data and no other geochemical data was used. ** these samples were used
-to determine a shared R\textsuperscript{2}-value of 0.79.}
-
-\centering{
-
-}
-
-\end{table}%
-
+\phantomsection\label{Table_2}
 \begin{longtable}[]{@{}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1757}}
-  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2973}}@{}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1918}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1918}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1918}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.1918}}
+  >{\raggedright\arraybackslash}p{(\columnwidth - 8\tabcolsep) * \real{0.2329}}@{}}
+\caption{Table showing correlations of Mg/Ca and δ\textsuperscript{18}O
+found in other studies. * indicates that only SST data and no other
+geochemical data was used. ** these samples were used to determine a
+shared R\textsuperscript{2}-value of 0.79.}\tabularnewline
+\toprule\noalign{}
+\begin{minipage}[b]{\linewidth}\raggedright
+Species
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Locality
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Specimen
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+R\textsuperscript{2}
+\end{minipage} & \begin{minipage}[b]{\linewidth}\raggedright
+Study
+\end{minipage} \\
+\midrule\noalign{}
+\endfirsthead
 \toprule\noalign{}
 \begin{minipage}[b]{\linewidth}\raggedright
 Species
@@ -866,7 +834,7 @@ Study
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-Ferg-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-Ferg-1.pdf}
 
 }
 
@@ -890,13 +858,13 @@ growth at the very edge (dashed box in Figure~\ref{fig-ORK_sub})
 mirroring the change towards warmer temperatures at the time of
 collection (August). Including these missing parts lead to a better
 alignment of both records and a resulting R\textsuperscript{2}-value of
-0.88
+0.88.
 
 \begin{figure}
 
 \centering{
 
-\includegraphics{Manuscript_files/figure-pdf/fig-ORK_sub-1.pdf}
+\includegraphics{Manuscript_with_Heshkaia_files/figure-pdf/fig-ORK_sub-1.pdf}
 
 }
 
@@ -907,27 +875,50 @@ and δ\textsuperscript{18}O-values}
 \end{figure}%
 
 While we were not able to resample the \emph{Nacella} sp. specimens in
-\citeyearpar{Graniero2017-io}.
+Graniero \emph{et al.} \citeyearpar{Graniero2017-io}, we were able to
+source other modern and archaeological specimens of the same species
+from Tierra del Fuego, which can serve as an indicator. Similar to other
+patelloid shells, the results of the \emph{Nacella} specimens in our
+study were successful with high R\textsuperscript{2}-values (0.76--0.95)
+and suggest Mg/Ca as a reliable proxy for SST (Figure~\ref{fig-Nac_Comp}
+and supplementaries). Why these results are different from the studied
+\emph{Nacella} sp. specimens in Graniero et al.
+\citeyearpar{Graniero2017-io} is not obvious, but the occasional
+alignment of the Mg/Ca and δ\textsuperscript{18}O records of their
+shells (Figure 6 in \citep{Graniero2017-io} ) indicate that there is
+some relationship that --- potentially due to the low sampling
+resolution or intra-increment heterogeneity --- fell apart and lead to
+an overall result of an uncorrelated relationship between Mg/Ca and SST.
 
-Lastly Nacella in Graniero
+\section{Conclusion}\label{conclusion}
 
-Also the elemental imaging provided some insight into elemental
-anomalies along the increments, that introduce intra-incremental
-heterogeneity and that cannot be reconciled with modern SST changes or
-SST changes recorded in the δ\textsuperscript{18}O of the same shells.
+This study presents high-resolution and 2D information on Mg/Ca
+concentrations in modern and archaeological patelloid shells and their
+relation to sea surface temperature. The results for \emph{Patella
+vulgata}, \emph{Nacella deaureata}, and \emph{Nacella magellanica} were
+consistently promising with mean R\textsuperscript{2}-values of 0.89,
+0.86, and 0.88 respectively.
 
-Why different? Libs can avoid funny bits of shells or interpret them
-when they occur
+LIBS elemental imaging provided some insight into elemental anomalies
+found particulary in the external parts (m+3 layer) of the shell, which
+introduce intra-incremental heterogeneity and which cannot be reconciled
+with modern SST changes or SST changes recorded in the
+δ\textsuperscript{18}O of the same shells. Our 2D approach allowed us to
+avoid these areas of intra-increment heterogeneity and focus on areas
+that are predominantly controlled by changes in SST.
 
-what happened elsewhere?
-
-\begin{itemize}
-\item
-  Ferguson did it before but had other correlations (add mine?)
-\item
-  Graniero correlations not available because no data
-\item
-\end{itemize}
+These results are particularly promising for future analyses of
+patelloid shells for the study of season of collection in archaeological
+sites as well as the reconstruction of sub-annual climatic conditions in
+the past. Shells of the species studied here are widely available along
+the European Atlantic façade and the Argentinian coastline and make up a
+large part of marine mollusc remains in archaeological sites of those
+regions. Improving their analysis in terms of cost and time efficiency
+through the benefits of LIBS, which can be used in this context as a
+screening tool for targeted δ\textsuperscript{18}O analysis focusing on
+annual minima and maxima revealed in the Mg/Ca record, allows
+researchers to increase sample numbers and produce larger and more
+in-depth climatic studies than previously possible.
 
 
 \renewcommand\refname{References}
